--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/film_database
-#spring.datasource.url=jdbc:mysql://node180609-mytvz.jelastic.regruhosting.ru:3306/film_database
+spring.datasource.url=jdbc:mysql://localhost:3306/webshop
 spring.datasource.username=root
 spring.datasource.password=123456
-#spring.datasource.password=KABosp42961
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto = create-drop
 spring.thymeleaf.cache=true
@@ -17,10 +15,6 @@ spring.jpa.show-sql=true
 #spring.datasource.dbcp.validation-query=SELECT 1
 spring.messages.basename=i18n/message_vn
 spring.messages.cache-duration=15s
-# M?c ??nh ngôn ng? là ti?ng vi?t
-spring.mvc.locale=vi_VN
-# ??i thành ti?ng anh b?ng cách b? comment ? d?oi
-# spring.mvc.locale=en_US
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
 server.error.whitelabel.enabled=false
